feat: Integrate Vertx instance into HealthCheckManager and update related tests; enhance metrics recording with dynamic gauges